--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@ h1, h3 {
 
 #nav {
     list-style-type: none;
-    max-width: 1300px;
+    max-width: 2000px;
+    min-width: 300px;
     text-align: end;
-    background-color: #5c156e;
-    justify-content: space-around;
+    background-color: #b178bd;
   }
 
 #nav li { display: inline; }
@@ -31,6 +31,69 @@ h1, h3 {
   padding: 3px;
 }
 
+  
+/* .btn {
+margin: 20px auto;
+text-align: center;
+}
+
+button {
+padding: 20px;
+background: transparent;
+text-shadow: 1px 1px 1px #202020;
+font-size: 18pt;
+border: 1px light-blue;
+color: black;
+} */
+
+.results {
+	display: flex;
+	align-items: flex-end;
+	justify-content: end;
+}
+
+.result {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 10px;
+	height: 400px;
+	width: 300px;
+}
+
+.result img {
+	object-fit: cover;
+	height: 100%;
+	width: 100%;
+}
+
+.buttons {
+	display: flex;
+	align-items: flex-end;
+	justify-content: end;
+}
+
+button {
+	background-color: rgb(123, 129, 214);
+	border: 0;
+	border-radius: 4px;
+	color: #fff;
+  font-family: "Cinzel", cursive;
+	font-size: 18px;
+	padding: 10px;
+	margin: 10px;
+	width: 300px;
+}
+
+button:active {
+	transform: scale(0.98);
+}
+
+button:focus {
+	outline: none
+}
+
+/*  */
 
 .anim {
   white-space: nowrap;
@@ -47,7 +110,7 @@ h1, h3 {
 
 @keyframes animated-text{
   from{width: 0;}
-  to{width: 1000px;}
+  to{width: 100%;}
 }
 
 
