--- a/css/style.css
+++ b/css/style.css
@@ -31,21 +31,6 @@ h1, h3 {
   padding: 3px;
 }
 
-  
-/* .btn {
-margin: 20px auto;
-text-align: center;
-}
-
-button {
-padding: 20px;
-background: transparent;
-text-shadow: 1px 1px 1px #202020;
-font-size: 18pt;
-border: 1px light-blue;
-color: black;
-} */
-
 .results {
 	display: flex;
 	align-items: flex-end;
@@ -74,7 +59,7 @@ color: black;
 }
 
 button {
-	background-color: rgb(123, 129, 214);
+	background-color: #7b81d6;
 	border: 0;
 	border-radius: 4px;
 	color: #fff;
@@ -93,7 +78,6 @@ button:focus {
 	outline: none
 }
 
-/*  */
 
 .anim {
   white-space: nowrap;
