--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,38 @@
 body {
-    font-family: "Cinzel", cursive;
+  font-family: "Cinzel", cursive;
 }
 h1, h3 {
-    font-family: "Cinzel Decorative", cursive;
-    color: #5c156e;
+  font-family: "Cinzel Decorative", cursive;
+  color: #5c156e;
 }
 
+/* navigation bar */
 #nav {
-    list-style-type: none;
-    max-width: 2000px;
-    min-width: 300px;
-    text-align: end;
-    background-color: #b178bd;
-  }
+  list-style-type: none;
+  max-width: 2000px;
+  min-width: 300px;
+  text-align: end;
+  background-color: #b178bd;
+}
 
 #nav li { display: inline; }
 #nav a {
-  color: white;
-  padding: 5px 15px;
-  text-decoration: none;
-  font-weight: 700;
-  width: 100px;
+color: white;
+padding: 5px 15px;
+text-decoration: none;
+font-weight: 700;
+width: 100px;
 }
 #nav a:hover {
-  background-color: #a05dad;
+background-color: #a05dad;
 }
 
 *, html, body {
-  box-sizing: border-box;
-  padding: 3px;
+box-sizing: border-box;
+padding: 3px;
 }
 
-  
+
 /* .btn {
 margin: 20px auto;
 text-align: center;
@@ -46,118 +47,126 @@ border: 1px light-blue;
 color: black;
 } */
 
+.clicker{
+  position: absolute;
+  margin-left: 20px;
+}
+
+/* fetch api */
 .results {
-	display: flex;
-	align-items: flex-end;
-	justify-content: end;
+display: flex;
+align-items: flex-end;
+justify-content: end;
 }
 
 .result {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-  position: absolute;
-	margin-top: 90%;
-	height: 400px;
-	width: 300px;
-  right: 5%;
+display: flex;
+align-items: center;
+justify-content: center;
+position: absolute;
+height: 375px;
+width: 300px;
+margin-bottom: 20px;
+margin-right: 20px;
+border: 3px solid #eea3c6; 
+border-radius: 8px; 
+padding: 5px;
 }
 
 .result img {
-	object-fit: cover;
-	height: 100%;
-	width: 100%;
+object-fit: cover;
+height: 100%;
+width: 100%;
 }
 
 .buttons {
-	display: flex;
-	margin-bottom: 190%;
-  right: 4.3%;
-  position: absolute;
+display: flex;
+margin-bottom: 20px;
+right: 22px;
+position: absolute;
 
 }
 
 button {
-	background-color: #7b81d6;
-	border: 0;
-	border-radius: 4px;
-	color: #fff;
-  font-family: "Cinzel", cursive;
-	font-size: 18px;
-	padding: 10px;
-	margin: 10px;
-	width: 300px;
+background-color: #7b81d6;
+border: 0;
+border-radius: 4px;
+color: #fff;
+font-family: "Cinzel", cursive;
+font-size: 18px;
+padding: 10px;
+margin: 10px;
+width: 300px;
 }
 
 button:active {
-	transform: scale(0.98);
+transform: scale(0.98);
 }
 
 button:focus {
-	outline: none
+outline: none
 }
 
-/*  */
-
+/* text animaion */
 .anim {
-  white-space: nowrap;
-  overflow: hidden;    
-  font-size: 50px;
-  font-family: Dancing Script;
-  color: #5c156e;
+white-space: nowrap;
+overflow: hidden;    
+font-size: 50px;
+font-family: Dancing Script;
+color: #5c156e;
 }
 
 .anim {
-  animation: animated-text 7s ease-out;
-  animation-iteration-count: infinite;
+animation: animated-text 7s ease-out;
+animation-iteration-count: infinite;
 }
 
 @keyframes animated-text{
-  from{width: 0;}
-  to{width: 100%;}
+from{width: 0;}
+to{width: 100%;}
 }
 
-
+/* card works */
 .column {
-  float: left;
-  width: 25%;
-  padding: 0 1px;
+float: left;
+width: 25%;
+padding: 0 1px;
 }
 
 .row {
-  margin: 0 -5px;   
+margin: 0 -5px;   
 }
 
 .row:after {
-  content: "";
-  display: table;
-  clear: both;
+content: "";
+display: table;
+clear: both;
 }
-  
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  margin: 10px;
-  text-align: center;
-  background-color: #eea3c6;
-  color: #5c156e;
+box-shadow: 0 4px 8px 0 #00000033;
+padding: 10px;
+margin: 10px;
+text-align: center;
+background-color: #eea3c6;
+color: #5c156e;
 }
 
 @media (max-width: 360px) {
-  .column, row{
-    max-width: 100%;
-    display: block;
-  }
+.column, row{
+  max-width: 100%;
+  display: block;
+}
 
 }
 
+/* social media icons */
 .fa {
-  padding: 20px;
-  font-size: 50px;
-  width: 50px;
-  text-decoration: none;
-  margin: 5px 2px;
-  color: white;
-  justify-content: space-around;
+padding: 20px;
+font-size: 50px;
+width: 50px;
+text-decoration: none;
+margin: 5px 2px;
+color: white;
+justify-content: space-around;
 }
